fixup! remove old add-reads for executor
Signed-off-by: Sam Gammon <sam@elide.ventures>